[tool.poetry]
name = "gimvicurnik"
description = "An API for a school timetable, substitutions and menus at Gimnazija Vič"
readme = "README.md"
license = "GPL-3.0-or-later"
version = "0.0.0"

homepage = "https://urnik.gimvic.org/"
repository = "https://github.com/filips123/GimVicUrnik"
documentation = "https://github.com/filips123/GimVicUrnik/blob/main/README.md"

authors = [
    "filips123 <projects@filips.si>",
    "ChristofferNorgaard"
]

keywords = [
    "timetables",
    "substitutions",
    "menus",
    "gimvic"
]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Framework :: Flask",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3",
    "Topic :: Database",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Utilities"
]

[tool.poetry.scripts]
gimvicurnik = "gimvicurnik.__main__:main"

[tool.poetry.dependencies]
python = "^3.10"
PyYAML = "^6.0.3"
flask = "^3.1.3"
click = "^8.3.3"
attrs = "~26.1.0"
cattrs = "~26.1.0"
requests = "^2.33.1"
SQLAlchemy = "^2.0.49"
pdfplumber = "^0.11.9"
openpyxl = "^3.1.5"
mammoth = "^1.12.0"
icalendar = "^7.0.3"
beautifulsoup4 = { version = "^4.14.3", extras = ["lxml"] }

# Optional support for Sentry integration
sentry-sdk = { version = "^2.58.0", extras = ["flask", "sqlalchemy", "pure_eval"], optional = true }

# Optional support for different databases
mysqlclient = { version = "^2.2.8", optional = true }
psycopg2 = { version = "^2.9.12", optional = true }

[tool.poetry.group.dev.dependencies]
mypy = "^1.20.2"
ruff = "^0.15.11"
types-pyyaml = "^6.0.12"
types-openpyxl = "^3.1.5"
types-requests = "^2.33.0"
types-beautifulsoup4 = "^4.12.0"

[tool.poetry.extras]
sentry = ["sentry-sdk"]
mysql = ["mysqlclient"]
pgsql = ["psycopg2"]

[tool.ruff]
line-length = 110

[tool.ruff.lint]
select = ["F", "E", "W", "UP", "B", "G", "RUF"]
ignore = ["E203", "E501", "F401"]

[tool.black]
line-length = 110

[tool.mypy]
python_version = "3.10"
show_column_numbers = true
show_error_codes = true
allow_redefinition = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unused_ignores = true
warn_no_return = true
warn_return_any = true
warn_unreachable = true

[tool.poetry-dynamic-versioning]
enable = true

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry.core.masonry.api"
